--- a/AppLearn/Views/Shared/_Layout.cshtml
+++ b/AppLearn/Views/Shared/_Layout.cshtml
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/AppLearn.styles.css" asp-append-version="true" />
+    <script src="https://kit.fontawesome.com/3f5c498a21.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header style="padding: px; background-color: #9b1f17;">
+    <header style="background-color: #9b1f17;">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <!-- Toggler Button for Mobile View -->
@@ -18,12 +19,13 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
+                <!-- Company/App Logo or Name -->
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="~/img/App-Learn Wordmark V1.png" alt="Company Logo" style="height: 80px; width: 250px;">
+                </a>
+
                 <!-- Navigation Links (Centered) -->
                 <div class="navbar-collapse collapse d-sm-flex justify-content-center">
-                    <!-- Company/App Logo or Name -->
-                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                        <img src="~/img/App-Learn Wordmark V1.png" alt="Company Logo" style="height: 70px; width: 200px;">
-                    </a>
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" style="color: white; font-size: 20px; font-family:Times New Roman">Home</a>
@@ -38,10 +40,10 @@
                             <a class="nav-link" asp-area="" asp-controller="Plans" asp-action="Index" style="color: white; font-size: 20px; font-family:Times New Roman">Plans</a>
                         </li>
                     </ul>
-                    <div>
-                        <a class="button-50" asp-area="" asp-controller="Account" asp-action="Login">Sign In</a>
-                        <a class="button-50" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
-                    </div>
+                </div>
+                <div class="button-container">
+                    <a class="button-50" asp-area="" asp-controller="Account" asp-action="Login">Sign In</a>
+                    <a class="button-50" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
                 </div>
             </div>
         </nav>
@@ -52,9 +54,44 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted" style="background-color: #9b1f17;">
-        <div class="container">
-            &copy; 2023 - AppLearn - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <footer class="footer-distributed border-top " style="background-color: #9b1f17;">
+        <div class="footer-left">
+            <h3><img src="~/img/App-Learn Wordmark V1.png" alt="Company Logo" style="height: 90px; width: 300px;"></h3>
+            <p class="footer-links">
+                <a href="#" class="link-1">Home</a>
+                <a href="#">Blog</a>
+                <a href="#">Pricing</a>
+                <a href="#">About</a>
+                <a href="#">Faq</a>
+                <a href="#">Contact</a>
+            </p>
+            <p class="footer-company-name">AppLearn © 2023</p>
+        </div>
+        <div class="footer-center">
+            <div>
+                <i class="fa fa-map-marker"></i>
+                <p><span>1234 E West Street</span> Evansville, Indiana</p>
+            </div>
+            <div>
+                <i class="fa fa-phone"></i>
+                <p>+1.123.456.7890</p>
+            </div>
+            <div>
+                <i class="fa fa-envelope"></i>
+                <p><a href="mailto:support@company.com">support@AppLearn.com</a></p>
+            </div>
+        </div>
+        <div class="footer-right">
+            <p class="footer-company-about">
+                <span>About AppLearn</span>
+                Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
+            </p>
+            <div class="footer-icons">
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+            </div>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
